[package]
name = "axum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["macros"]}
console-subscriber = "0.5.0"
rustls = "0.24.0-dev.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.49.0",features = ["full", "rt-multi-thread"] }
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
