[package]
name = "axum_srvr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = {version = "0.8.8", features = ["macros"]}
axum-server = {version = "0.8.0", features = ["tls-rustls"]}
chrono = "0.4.44"
console-subscriber = "0.5.0"
dotenv = "0.15.0"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
password-hash = "0.6.0"
rand_core = {version = "0.6.0",default-features = false, features = ["std"]}
rustls = {version = "0.24.0-dev.0", features = [ ]}
rustls-pemfile = "2.2.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["runtime-tokio","postgres","macros","chrono","uuid"]}
tokio = {version = "1.49.0",features = ["full", "rt-multi-thread"] }
tokio-rustls = "0.26.4"
tower = "0.5.3"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["json"]}
